ingressclass/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoamitcp
  name: whoamitcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoamitcp
  template:
    metadata:
      labels:
        app: whoamitcp
    spec:
      containers:
        - image: traefik/whoamitcp
          name: whoamitcp
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - image: traefik/whoami
          name: whoami
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc-tcp
spec:
  type: ClusterIP
  selector:
    app: whoamitcp
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - port: 80
